# exasol-bundle

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  MANIFEST.in  README.md  USER_GUIDE.md  install.sh  pyproject.toml  setup.py
.github/: renovate.json
.github/workflows/: build-upstream-wheels.yml  pr-validation.yml  release.yml
arch-linux/: PKGBUILD
exasol_bundle/: __init__.py  cli.py  core.py  registry.py
exasol_bundle/components/: json_tables.py  mcp_server.py  personal_db.py
homebrew/Formula/: exasol-bundle.rb
npm-wrapper/: package.json
scripts/: check_versions.py
tests/: test_bug_conditions.py  test_preservation.py  test_unit_check_versions.py  test_unit_init_version.py  test_unit_install_sh.py  test_unit_json_tables.py  test_unit_personal_db.py  test_unit_wrapper_js.py
