[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exa-bundle"
version = "1.0.0"
description = "Universal orchestrator for the Exasol tooling ecosystem"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Exasol Open Source", email = "opensource@exasol.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Standard pip dependencies. These are the underlying Python components.
dependencies = [
    "exasol-mcp-server>=2.0,<3.0",
    "exasol-json-tables>=1.0,<2.0"
]

[project.scripts]
exa-bundle = "exa_bundle.cli:main"

[tool.setuptools.packages.find]
include = ["exa_bundle*"]