[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exasol-bundle"  
version = "1.0.18"
description = "Universal orchestrator for the Exasol tooling ecosystem"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Exasol Open Source", email = "opensource@exasol.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "exasol-mcp-server>=2.0,<3.0",
    # REMOVED exasol-json-tables. We handle this manually now.
]

[project.scripts]
exa-bundle = "exa_bundle.cli:main"

[tool.setuptools.packages.find]
include = ["exa_bundle*"]